[package]
name = "rust_test_actix_chat_actorless"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = "4.5.1"
actix-ws = "0.2.5"

rand = "0.8.0"
tokio = { version = "1.37.0", features = ["rt", "time", "macros"]}
futures-util = "0.3.30"